<resources>
    <string name="app_name">ON-ECO</string>
    <string name="on_eco">ON-ECO</string>
    <string name="textview">TextView</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="todo">TODO</string>
    <string name="write_trash_Btn">오늘의 쓰레기 배출 기록</string>
    <string name="write_water_Btn">오늘의 물 사용 기록</string>
    <string name="statisBtn">배출/사용량 통계</string>
    <string name="string_statisbtn">배출/사용량 통계</string>
    <string name="water_gameBtn">샤워 타이머 게임</string>
    <string name="title_write_water">물 사용 기록</string>
    <string name="title_write_trash">쓰레기 배출 기록</string>
    <string name="title_statistic">나의 통계</string>
    <string name="title_mypage">마이페이지</string>
    <string name="Btn_tooth">양치</string>
    <string name="Btn_handwash">손씻기</string>
    <string name="Btn_facewash">세수</string>
    <string name="Btn_bodywash">샤워</string>
    <string name="Btn_dishwash">설거지</string>
    <string name="Btn_etc">기타</string>
    <string name="Btn_afterTimer">물 사용량 측정</string>
    <string name="Btn_beforeGame">샤워 타이머 게임</string>
    <string name="Btn_before">Btn_before</string>
    <string name="Btn_checkStatis">checkStatistic</string>
    <string name="Btn_handWash">Button</string>
    <string name="Btn_toothBrush">양치</string>
    <string name="title_on_eco1">ON-ECO</string>
    <string name="title_on_eco2">ON-ECO</string>
    <string name="goto_mypage">goto_mypage</string>
    <string name="Btn_input_today_W">Button</string>
    <string name="Userinput_today_W">Name</string>
    <string name="user_input_TW">입력하세요</string>
    <string name="input_TW">추가</string>
    <string name="mtitle_today_water">오늘 사용한 물의 양</string>
    <string name="real_used_water">10L</string>
    <string name="saving_water">전일 대비 절약한 물의 양</string>
    <string name="real_saving_water">-6L</string>
    <string name="timer">timer</string>
    <string name="timer_img">timer</string>
    <string name="Btn_start_TimerW">측정 시작</string>
    <string name="Btn_gameStart">시작</string>
    <string name="title_activity_statistic">Statistic</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_on_eco">ON-ECO</string>
    <string name="start_decibel">측정 시작하기</string>
    <string name="get_ampl">진폭 가져오기</string>
    <string name="normal_trash">일반쓰레기</string>
    <string name="glass">유리</string>
    <string name="paper">종이</string>
    <string name="plastic">플라스틱</string>
    <string name="plastic_bag">비닐</string>
    <string name="can">캔</string>
    <string name="bottle">bottle</string>
    <string name="etc">기타</string>
    <string name="mtitle_today_trash">오늘 배출한 쓰레기</string>
    <string name="real_used_trash">100G</string>
    <string name="saving_trash">전일 대비 배출한 쓰레기</string>
    <string name="scan_trash">쓰레기 스캔하기</string>
    <string name="real_saving_trash">10G</string>
    <string name="Userinput_today_T">trash</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="tfe_ic_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="tfe_ic_gpu_quant_error" translation_description="Error regarding GPU support for Quant models[CHAR_LIMIT=60]">GPU does not yet supported quantized models.</string>
</resources>