<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".WriteWater">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/Btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/Btn_before"
                    app:srcCompat="?attr/actionModeCloseDrawable"
                    app:tint="#606060"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/title_ONECO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="ON-ECO"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <ImageButton
                    android:id="@+id/Wstatistic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/Btn_checkStatis"
                    app:srcCompat="@drawable/statistic"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <TextView
                android:id="@+id/subtitle_today_water"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/title_write_water"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/Btn_toothBrush"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Btn_tooth" />

                        <Button
                            android:id="@+id/Btn_handWash"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="손 씻기" />

                        <Button
                            android:id="@+id/Btn_faceWash"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Btn_facewash" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/Btn_shower"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Btn_bodywash" />

                        <Button
                            android:id="@+id/Btn_dishWash"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Btn_dishwash" />

                        <Button
                            android:id="@+id/Btn_etc_water"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Btn_etc" />
                    </LinearLayout>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/Btn_bef_WTimer"
                        style="@style/Widget.Material3.Button"
                        android:layout_width="match_parent"
                        android:layout_height="85dp"
                        android:backgroundTint="#9EC2FD"
                        android:insetLeft="15dp"
                        android:insetTop="4dp"
                        android:insetRight="15dp"
                        android:text="@string/Btn_afterTimer"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                    <Button
                        android:id="@+id/Btn_bef_WTimer_Game"
                        style="@style/Widget.Material3.Button"
                        android:layout_width="match_parent"
                        android:layout_height="85dp"
                        android:backgroundTint="#759FE4"
                        android:insetLeft="15dp"
                        android:insetTop="4dp"
                        android:insetRight="15dp"
                        android:text="@string/Btn_beforeGame"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/UserInputWater"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number"
                        android:minHeight="48dp"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        android:gravity="center"
                        android:text="ml"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <Button
                        android:id="@+id/Btn_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_horizontal"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="+"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/Btn_sub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_horizontal"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="-" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/subtitle_today_water_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mtitle_today_water"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/TXT_today_water_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ml"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:gravity="end"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/subtitle_water_compareBefore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="전일 대비 사용한 물의 양"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/TXT_saved_water"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="ml"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>